--- a/src/main/resources/assets/vampirismguide/lang/en_US.lang
+++ b/src/main/resources/assets/vampirismguide/lang/en_US.lang
@@ -14,7 +14,7 @@ guide.vampirism.overview.config.general.text=§lGeneral configuration§r\n§ovam
 guide.vampirism.overview.config.general.examples=§lNoticeable Examples:§r\n§oSundamage Dimensions§r\nYou can set a default for unspecified dimension (sundamage_default). You can specify sundamage for a dimension by adding ":<1/0>" to sundamge_dims (e.g. "5:1" to enable sundamage in dim 5). Use one line/String for each dimension. You can find out the dimension you are in game with "/vampirism currentDimension".\n§oAuto convert glass bottles$r\n By default Vampirism automatically converts between blood bottles and glas bottles depending on what is needed right now. If you do not want this or it causes problems with another mod, you can disable it.
 guide.vampirism.overview.config.balance.text=§lBalance§r\n§obalance/§r\nIn this folder you will find quite a few files with a lot of options. They allow you to balance Vampirism after your own wishes and should be pretty self-explaining. In case you haven't changed anything, it is very recommend to use the "/resetBalance " after updating Vampirism to a new version to apply changed default balance values. You can either reset all files at once (Use "all") or specific ones.
 guide.vampirism.overview.trouble=Troubleshooting
-guide.vampirism.overview.trouble.text=§bIf your game crashes or does not start, we do NEED a crashreport§r\nWithout a log file or at at least a extensive description of your problem, we can do absolutely nothing to help you.\nSo please follow the following steps (If you have questions about the steps themselves, feel free to ask):\n1. Find the Minecraft log file If you use the standard Minecraft launcher, the interesting logfile is .minecraft/logs/fml-client-latest.txt. (How to find the .minecraft folder). In case you have a server, the interesting log file should be logs/fml-server-latest.txt. If you use another launcher, it might have a function to easily upload or locate log files.\n2. Make a post in the Minecraft Forum thread, describe the problem and include the log either within a spoiler or as a Pastebin of it. If you know what you are doing, you can also create an issue on Github.
+guide.vampirism.overview.trouble.text=§c§lIf your game crashes or does not start, we do NEED a crashreport§r\nWithout a log file or at at least a extensive description of your problem, we can do absolutely nothing to help you.\nSo please follow the following steps (If you have questions about the steps themselves, feel free to ask).\n1. Find the Minecraft log file If you use the standard Minecraft launcher, the interesting logfile is .minecraft/logs/fml-client-latest.txt. (How to find the .minecraft folder). In case you have a server, the interesting log file should be logs/fml-server-latest.txt. If you use another launcher, it might have a function to easily upload or locate log files.\n2. Make a post in the Minecraft Forum thread, describe the problem and include the log either within a spoiler or as a Pastebin of it. If you know what you are doing, you can also create an issue on Github.
 guide.vampirism.overview.dev=Development
 guide.vampirism.overview.dev.text=This mod is currently developed by Maxanier and translate by many helpful users. If you have some good Java knowledge and want to help please contact him. If not you still can help by translating, giving feedback or creating textures. For more information checkout the link on the side.
 guide.vampirism.overview.support=Support the development
@@ -112,7 +112,7 @@ guide.vampirism.items.hunterIntel.text=Can be crafted in %s. Required to level u
 guide.vampirism.items.itemGarlic.text=Can be found in some villages. You can cultivate it similar to carrots.
 guide.vampirism.items.pitchfork.text=Deals a lot of damage
 guide.vampirism.items.vampireBook.text=Can be found in dungeons, mineshafts, pyramids and other loot chests. Required to level up as a Vampire.
-guide.vampirism.items.vampireBlood.text=Dropped by %s if killed with a %s or by %s. Can be used for blood potions and more.
+guide.vampirism.items.vampireBloodBottle.text=Dropped by %s if killed with a %s or by %s. Can be used for blood potions and more.
 guide.vampirism.items.crossbows=Crossbows
 guide.vampirism.items.crossbows.text=There are several different crossbows, some of them require special skills to be crafted or used. They use %s. (The tech bows use %s).\n§4Crossbows can only be used by Vampire Hunters.§r
 guide.vampirism.items.crossbowArrow.text=Used in crossbows.
@@ -120,8 +120,9 @@ guide.vampirism.items.armorOfSwiftness=Armor of Swiftness
 guide.vampirism.items.armorOfSwiftness.text=This armor is very light and therby allows you to run faster. It exists in different versions and the better ones even give you a jump boost. §4Can only be used by Vampire Hunters$r
 guide.vampirism.items.hunterCoat=Hunter Coat
 guide.vampirism.items.hunterCoat.text=Armor specifically designed for Vampire Hunters. If fully equipped it hides your from vampire's blood vision and protects you from the "Freeze" skill. A vampire baron is still able to slow down you a little bit. Also causes extra damage to any vampire that bites you. §4Can only be used by Vampire Hunters$r
-guide.vampirism.items.hunterAxe.text=Has a high knockback and deals extra damage to vampires. §4Can only be used by Vampire Hunters$r
+guide.vampirism.items.hunterAxe.text=Has a high knockback and deals extra damage to vampires. §4Can only be used by Vampire Hunters§r
 guide.vampirism.items.stake.text=Useful for trained Vampire Hunters. If they have the respective skill unlocked, they can e.g. instant kill vampires with below %s health with this.
+
 #Blocks
 guide.vampirism.blocks.title=Blocks
 guide.vampirism.blocks.castleBlock.text=Decorative block.
