--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -280,6 +280,7 @@ text.vampirism.purity=Purity
 text.vampirism.skill.deactivated_by_serveradmin=This skill is deactivated by your serveradmin
 text.vampirism.ritual_no_vampire=You need to be a vampire for this ritual
 text.vampirism.cant_fly_day=You cannot fly at daytime
+text.vampirism.cant_fly_end=You are not able to transfrom into a bat in the End
 text.vampirism.no_more_minions=You are not able to control any more minions
 text.vampirism.coffin.noSleep=You can only sleep at day
 text.vampirism.coffin.occupied=This coffin is occupied
