Implemented HunterDisguise action.

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -74,6 +74,9 @@ text.vampirism.skill.tech_weapons.desc=Learn how to build some advanced weapons
 text.vampirism.skill.enhanced_armor=Enhanced armor
 text.vampirism.skill.enhanced_weapons=Enhanced weapons
 
+#HUNTER ACTIONS
+action.vampirism.hunter.disguise=Disguise
+
 #BLOOD POTIONS
 text.vampirism.blood_potion.might_cause=Might cause:
 text.vampirism.blood_potion.any_effect=No special effect
