--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -73,6 +73,7 @@ text.vampirism.skill.tech_weapons=Technology
 text.vampirism.skill.tech_weapons.desc=Learn how to build some advanced weapons
 text.vampirism.skill.enhanced_armor=Enhanced armor
 text.vampirism.skill.enhanced_weapons=Enhanced weapons
+text.vampirism.skill.disguiseHunter.desc=Allows you to hide from mobs and become far less visible to other players
 
 #HUNTER ACTIONS
 action.vampirism.hunter.disguise=Disguise
