--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -24,6 +24,8 @@ text.vampirism.skill.night_vision=Night Vision
 text.vampirism.skill.disguise=Disguise
 text.vampirism.skill.1forestfog=Vista
 text.vampirism.skill.1forestfog.desc=Increase the fog distance in the Vampire Forest
+text.vampirism.skill.2waterresistance=Water Resistance
+text.vampirism.skill.2waterresistance.desc=Your body will not be weakened by water anymore
 
 #VAMPIRE ACTIONS
 action.vampirism.cancel=Cancel
