--- a/src/main/resources/assets/vampirismguide/lang/en_US.lang
+++ b/src/main/resources/assets/vampirismguide/lang/en_US.lang
@@ -27,6 +27,7 @@ guide.vampirism.vampire.gettingStarted.become=To become a vampire you have to be
 guide.vampirism.vampire.gettingStarted.asVampire=Once you become a Vampire, one of your main sources of blood (at least the best source) are villagers and you should find plenty of those. Watch out though, Vampire Hunter will not attack you and try to protect the villagers.\nYou will already notice that you do not feel very good in the sun, but the sunlight won't hurt such a weak vampire as you are at this point.
 guide.vampirism.vampire.gettingStarted.blood=As a Vampire, you need to watch how much blood you have. Suck blood by pressing '%s' from villagers and some animals to get more blood. Extra blood will be stored in Glas Bottles/Blood Bottles on your hotbar. You might even be able to suck blood from other players, as long as you are coming from behind so they can't defend themselves. If you bite a mob, that does not have blood, you will deal some damage to them.
 guide.vampirism.vampire.gettingStarted.level=In the beginning you will be a level 1 vampire (the level is displayed above your XP-level) and have improved speed, health and strength.\nTo get to higher vampire levels you have to perform different rituals. As you advance through levels your abilities improve, but some disadvantages like sun damage might appear.
+guide.vampirism.vampire.gettingStarted.level2=As a vampire you do not breath, so you do not drown. But unfortunately water will greatly weaken you.\nSo if you want to frequently cross water, you might want to try to make your body water resistant. You will be able to unlock a skill that does this at a higher levels.
 
 guide.vampirism.vampire.blood=Blood
 guide.vampirism.vampire.blood.text=As a vampire you need blood like normal humans need food. With higher levels your blood usage will even increase.\nYou already know how to get it (see "Getting Started"), but you can also store it).\nIt is recommend to always have a few %s with you. You can fill them be having them on you hotbar when biting mobs with a full blood bar.\nAlternatively you can use %s which are automatically converted when biting.
@@ -132,7 +133,7 @@ guide.vampirism.blocks.altarInfusion.text=Multiblock structure. Used to level up
 guide.vampirism.blocks.hunterTable.text=Used to craft %s
 guide.vampirism.blocks.churchAltar.text=Found in the church of some villages. Can be used to become a normal human again if you are a vampire.
 guide.vampirism.blocks.weaponTable.text=Used to craft several hunter weapons and tools. Some recipes use lava, so you have to fill it by right clicking with a lava bucket.\n§4Can only be used by Vampire Hunters$r and requires a special skill.
-guide.vampirism.blocks.bloodPotionTable.text=Used to craft blood potions. Insert vampire blood bottles, garlic and optionally another item. §4Can only be used by Vampire Hunters$r and requires a special skill.
+guide.vampirism.blocks.bloodPotionTable.text=Used to craft blood potions. Insert vampire blood bottles, garlic and optionally another item. §4Can only be used by Vampire Hunters§r and requires a special skill.
 guide.vampirism.blocks.itemCoffin.text=Can be used by vampires to sleep through the day.
 guide.vampirism.blocks.itemMedChair.text=Used to infuse %s and %s.
 
