Added obsidian armor

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -196,6 +196,10 @@ item.vampirism.hunterCoat.head.name=Hunter Coat Helmet
 item.vampirism.hunterCoat.chest.name=Hunter Coat
 item.vampirism.hunterCoat.legs.name=Hunter Coat Leggings
 item.vampirism.hunterCoat.feet.name=Hunter Coat Boots
+item.vampirism.obsidianArmor.head.name=Obsidian Helmet of Hell
+item.vampirism.obsidianArmor.chest.name=Obsidian Chestplate of Hell
+item.vampirism.obsidianArmor.legs.name=Obsidian Leggings of Hell
+item.vampirism.obsidianArmor.feet.name=Obsidian Boots of Hell
 
 
 
