--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -200,6 +200,8 @@ item.vampirism.obsidianArmor.head.name=Obsidian Helmet of Hell
 item.vampirism.obsidianArmor.chest.name=Obsidian Chestplate of Hell
 item.vampirism.obsidianArmor.legs.name=Obsidian Leggings of Hell
 item.vampirism.obsidianArmor.feet.name=Obsidian Boots of Hell
+item.vampirism.holy_water_bottle.name=Holy Water
+item.vampirism.holy_water_bottle.splash.name=Splash Bottle of Holy Water
 
 
 
