--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -107,6 +107,7 @@ entity.vampirism.dead_mob.name=Dead mob
 entity.vampirism.portal_guard.name=Portal Guard
 entity.vampirism.converted.villager.name=Vampire Villager
 text.vampirism.entity_level=Level
+entity.Villager.vampire_hunter=Alchemic Priest
 
 #RITUALS
 text.vampirism.ritual_missing_items=Missing %s of "%s" for this ritual
@@ -202,6 +203,8 @@ item.vampirism.obsidianArmor.legs.name=Obsidian Leggings of Hell
 item.vampirism.obsidianArmor.feet.name=Obsidian Boots of Hell
 item.vampirism.holy_water_bottle.name=Holy Water
 item.vampirism.holy_water_bottle.splash.name=Splash Bottle of Holy Water
+item.vampirism.holy_salt.name=Holy Salt
+item.vampirism.holy_salt_water.name=Holy Salt Water
 
 
 
