Reworked garlic and modified holy water

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -292,6 +292,8 @@ death.attack.vampire_on_fire=%1$s burned to ashes
 death.attack.vampire_on_fire.player=%2$s scorched %1$s
 death.attack.vampire_in_fire=%1$s burned to ashes
 death.attack.vampire_in_fire.player=%1$s was incinerated by %2$s
+death.attack.holy_water=%1$s was burned with holy water
+death.attack.holy_water.player=%2$s burned %1$s with holy water
 text.vampirism.skill.level_to_low=Your vampire level is too low for that
 text.vampirism.skill.cooldown_not_over=Please wait until the cooldown is over
 text.vampirism.ritual_missing_times=You are missing items for this ritual
