--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -134,7 +134,10 @@ tile.vampirism.bloodPotionTable.name=Blood Potion Table
 tile.vampirism.bloodPotionTable.cannot_use=You have not learned how to use this
 tile.vampirism.sunscreenBeacon.name=Sunscreen Beacon
 tile.vampirism.alchemicalFire.name=Alchemical Fire
-
+tile.vampirism.alchemicalCauldron.other=This cauldron belongs to %s. You should not use it.
+tile.vampirism.alchemicalCauldron.name=Alchemical Cauldron
+tile.vampirism.alchemicalCauldron.display=%s's %s
+tile.vampirism.alchemicalCauldron.cannot_use=You have not leared how to use this
 
 #ITEMS
 item.vampirism.hunterIntel.name=Hunter Intel
