--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -208,6 +208,9 @@ item.vampirism.holy_water_bottle.name=Holy Water
 item.vampirism.holy_water_bottle.splash.name=Splash Bottle of Holy Water
 item.vampirism.holy_salt.name=Holy Salt
 item.vampirism.holy_salt_water.name=Holy Salt Water
+item.vampirism.itemAlchemicalFire.name=Alchemical Fire
+item.vampirism.itemAlchemicalFire.desc1=Does not spread
+item.vampirism.itemAlchemicalFire.desc2=Burns indefinitely
 
 
 
