--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -139,6 +139,7 @@ tile.vampirism.alchemicalCauldron.name=Alchemical Cauldron
 tile.vampirism.alchemicalCauldron.display=%s's %s
 tile.vampirism.alchemicalCauldron.cannot_use=You have not leared how to use this
 tile.vampirism.garlicBeacon.name=Garlic Beacon
+tile.vampirism.garlicBeacon.improved=Improved
 
 #ITEMS
 item.vampirism.hunterIntel.name=Hunter Intel
@@ -212,8 +213,9 @@ item.vampirism.holy_salt_water.name=Holy Salt Water
 item.vampirism.itemAlchemicalFire.name=Alchemical Fire
 item.vampirism.itemAlchemicalFire.desc1=Does not spread
 item.vampirism.itemAlchemicalFire.desc2=Burns indefinitely
-
-
+item.vampirism.purified_garlic.name=Purified Garlic
+item.vampirism.garlic_beacon_core.name=Garlic Beacon Core
+item.vampirism.garlic_beacon_core_improved.name=Improved Garlic Beacon Core
 
 #KEYS
 keys.vampirism.select_skills=Select Skills
