--- a/src/main/resources/assets/vampirismguide/lang/en_US.lang
+++ b/src/main/resources/assets/vampirismguide/lang/en_US.lang
@@ -133,7 +133,7 @@ guide.vampirism.items.hunterCoat.text=Armor specifically designed for Vampire Hu
 guide.vampirism.items.hunterAxe.text=Has a high knockback and deals extra damage to vampires. §4Can only be used by Vampire Hunters§r
 guide.vampirism.items.stake.text=Useful for trained Vampire Hunters. If they have the respective skill unlocked, they can e.g. instant kill vampires with below %s health with this.
 guide.vampirism.items.holy_water_bottle.text=Holy Water Bottles is an important weapon against vampires.\nIt can be either converted to splash bottles to directly damage vampires or used in further recipes.\n\nThere are two ways to obtain this.\nIt can be bought from a priest villager that specialised in vampire hunting or, if you learned how and have unlocked the respective skill, by blessing %s at a church altar (right-clicking the altar).\n%s can be obtained by adding %s to a water bottle.
-guide.vampirism.items.holy_salt.text=Holy Salt is the main ingredient for Holy Water.\nYou can buy it from some priest villagers or create it by blessing %s at a church altar (right-click the altar with it).\n %s again can be found in chests or, if you have learned how, by cooking water in the %s for a long time.
+guide.vampirism.items.holy_salt.text=Blessed Salt is the main ingredient for Holy Water.\nYou can buy it from some priest villagers or create it by blessing %s at a church altar (right-click the altar with it).\n %s again can be found in chests or, if you have learned how, by cooking water in the %s for a long time.
 guide.vampirism.items.purified_garlic.text=By filtering the most important parts out of the garlic bulb you get purified garlic.\nWhich can be used for powerful recipes or to boost the effect of a %s.
 guide.vampirism.items.itemAlchemicalFire.text=This carefully crafted complex powder creates a fire which burns indefinitely, but does not spread.\nYou can use it for decoration or defense, alternatively you can craft fire spreading crossbow arrows with it.
 guide.vampirism.items.obsidianArmor=Obsidian Armor of Hell
@@ -152,3 +152,5 @@ guide.vampirism.blocks.itemCoffin.text=Can be used by vampires to sleep through 
 guide.vampirism.blocks.itemMedChair.text=Used to infuse %s and %s.
 guide.vampirism.blocks.alchemicalCauldron.text=Used to craft a few alchemical recipes. §4Can only be used by Vampire Hunters§r and requires a special skill.
 guide.vampirism.blocks.garlicBeacon.text=Diffuses garlic particles into the air to weaken nearby vampires. The normal versions affects an area of 3x3 chunk around it, the improved one a 5x5. It's effect on vampires can be temporarily boosted by right-clicking it with %s. When boosted it even blinds nearby vampire players.
+guide.vampirism.blocks.altarInspiration.text=Used to level up as a vampire.
+guide.vampirism.blocks.bloodContainer.text=Can store a lot of blood. (Sneak-) Rightclick it with a blood bottle to put blood in or take blood out of it.
